--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -3,6 +3,7 @@ body {
   color: #333;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 300;
 }
 
 h1 {
@@ -99,7 +100,6 @@ em {
 }
 
 .body.home.page {
-  overflow: visible;
   height: 100%;
   background-color: transparent;
   background-image: url('../images/ch_home-s1--bg.jpg');
@@ -202,6 +202,7 @@ em {
   min-height: 100%;
   margin-top: 0px;
   padding-bottom: 130px;
+  font-weight: 300;
 }
 
 .home_s1--block {
@@ -520,15 +521,15 @@ em {
   padding-top: 10px;
   padding-bottom: 10px;
   float: none;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -596,7 +597,7 @@ em {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-left: -68px;
+  padding-right: 0rem;
   float: none;
   clear: none;
   -webkit-box-orient: horizontal;
@@ -612,6 +613,13 @@ em {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .home-header-content {
@@ -1000,7 +1008,6 @@ em {
 
 .social.desk {
   width: 6.5rem;
-  margin-right: 1rem;
   float: right;
   -webkit-box-ordinal-group: 2;
   -webkit-order: 1;
@@ -1021,9 +1028,6 @@ em {
 
 .social-link {
   border-bottom-style: none;
-  opacity: 0.92;
-  -webkit-filter: brightness(22%) saturate(37%);
-  filter: brightness(22%) saturate(37%);
 }
 
 .social-link:hover {
@@ -1033,9 +1037,14 @@ em {
 }
 
 .page-logo {
-  width: 170px;
-  margin-right: 10px;
-  margin-left: 20px;
+  width: 10rem;
+  margin-right: 0px;
+  margin-left: 1rem;
+  clear: none;
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+  -ms-flex-order: -1;
+  order: -1;
   border-bottom: 1px none #000;
 }
 
@@ -1852,6 +1861,32 @@ em {
   transform: rotate(11deg);
 }
 
+.social-image-home {
+  width: 30px;
+  margin-right: 10px;
+  margin-left: 10px;
+  float: none;
+}
+
+.social-image-copy {
+  width: 30px;
+  margin-right: 10px;
+  margin-left: 10px;
+  float: none;
+}
+
+.social-link-home {
+  border-bottom-style: none;
+  -webkit-filter: brightness(0%);
+  filter: brightness(0%);
+}
+
+.social-link-home:hover {
+  border-bottom-style: none;
+  -webkit-filter: brightness(100%);
+  filter: brightness(100%);
+}
+
 @media (max-width: 991px) {
   .main-navbar {
     position: absolute;
@@ -1886,6 +1921,7 @@ em {
     bottom: auto;
     padding-top: 60px;
     padding-bottom: 20px;
+    padding-left: 0rem;
     background-color: #ebebeb;
     color: #fff;
   }
@@ -1928,6 +1964,10 @@ em {
   }
   .home_s1--block {
     margin-bottom: -900px;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
   }
   .home_img--logo {
     display: block;
@@ -2092,19 +2132,28 @@ em {
   }
   .page-navlink--contain {
     margin-left: 0px;
-    padding-top: 60px;
+    padding-top: 40px;
+    padding-right: 0rem;
     padding-bottom: 12px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     background-color: #f8f8f8;
     color: #fff;
   }
   .home-header-content {
     margin-top: 40px;
     margin-bottom: 20px;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
   .order-top-text {
     margin-top: 0px;
@@ -2278,6 +2327,36 @@ em {
     margin-top: 20px;
     padding-top: 0px;
   }
+  .header-left-imgs {
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+  }
+  .home-cookie-03.cookie {
+    top: -36px;
+    right: 123px;
+    bottom: 33px;
+  }
+  .home-cookie-06.cookie {
+    left: 8px;
+  }
+  .home-cookie-08.cookie {
+    left: -85px;
+    top: -260px;
+    z-index: 1000;
+  }
+  .home-cookie-10.cookie {
+    left: -300px;
+    top: -419px;
+    z-index: 100000;
+  }
+  .social-link-home {
+    -webkit-filter: brightness(200%) saturate(0%);
+    filter: brightness(200%) saturate(0%);
+  }
+  .social-link-home:hover {
+    opacity: 1;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2289,10 +2368,10 @@ em {
     padding-top: 15px;
   }
   .home_s1--block {
-    margin-bottom: 20px;
+    margin-bottom: -870px;
   }
   .home_img--logo {
-    width: 25rem;
+    width: 22rem;
   }
   .home_gallery--block1 {
     width: 100%;
@@ -2344,6 +2423,7 @@ em {
     padding-left: 10px;
   }
   .home-header-content {
+    margin-top: -8px;
     margin-bottom: 0px;
     line-height: 16px;
   }
@@ -2521,6 +2601,24 @@ em {
   .about-contain {
     padding: 0px 40px;
   }
+  .home-cookie-01.cookie {
+    left: -1px;
+  }
+  .home-cookie-02.cookie {
+    top: 156px;
+    right: -81px;
+  }
+  .home-cookie-05.cookie {
+    top: -36px;
+  }
+  .home-cookie-06.cookie {
+    left: -21px;
+    top: -53px;
+  }
+  .home-cookie-10.cookie {
+    left: -313px;
+    top: -463px;
+  }
 }
 
 @media (max-width: 479px) {
@@ -2529,6 +2627,15 @@ em {
   }
   .home_s1--block {
     margin-top: 20px;
+    margin-bottom: auto;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
   }
   .home_img--logo {
     width: 18rem;
@@ -2633,6 +2740,43 @@ em {
   }
   .about-contain {
     padding: 0px 20px 20px;
+  }
+  .home-cookie-01.cookie {
+    display: none;
+  }
+  .home-cookie-02.cookie {
+    display: none;
+  }
+  .home-cookie-03.cookie {
+    display: none;
+  }
+  .home-cookie-04.cookie {
+    right: -5px;
+    display: none;
+  }
+  .home-cookie-05.cookie {
+    display: none;
+  }
+  .home-cookie-06.cookie {
+    display: none;
+  }
+  .home-cookie-07.cookie {
+    display: none;
+  }
+  .home-cookie-08.cookie {
+    display: none;
+  }
+  .home-cookie-09.cookie {
+    display: none;
+  }
+  .home-cookie-10.cookie {
+    display: none;
+  }
+  .home-cookie-11.cookie {
+    display: none;
+  }
+  .home-cookie-12.cookie {
+    display: none;
   }
 }
 
